# n-gram-text-gen

./: .gitignore  CMakeLists.txt  Harry_Potter_and_the_Sorcerers_Stone.txt  README.md  dictionary.cpp  dictionary.h  hypercube.cpp  hypercube.h  input1.txt  main.cpp  matrix.txt  matrix2.txt
dox/: Harry Potter and Markov chains.odt  cpp_code_style.xml
learning_texts/: Harry_Potter_and_the_Sorcerers_Stone.txt  Hobbit.txt  Lord of the Rings.txt  Silmarillon.txt  bible.txt  bible_utf8.txt  extract.sh  hp-2-harry-potter-and-the-chamber-of-secrets.txt  hp-3-harry-potter-and-the-prisoner-of-azkaban.txt  hp-4-harry-potter-and-the-goblet-of-fire.txt  hp-5-harry-potter-and-the-order-of-the-phoenix.txt  hp-6-harry-potter-and-the-half-blood-prince.txt  hp-7-harry-potter-and-the-deathly-hallows.txt  input.txt  sveik.txt  vojnaimir1.txt  vojnaimir2.txt  vojnaimir3.txt  vojnaimir4.txt
